# Phishing_phim_con_heo

./: main.py  pyproject.toml
phim_heo/: db.sqlite3  manage.py
phim_heo/main/: forms.py  models.py  urls.py  views.py
phim_heo/main/migrations/: 0001_initial.py  0002_user.py
phim_heo/main/templates/main/: download.html  index.html  index1.html  login.html  movieInfo.html  movieinfostyle.css  style.css
phim_heo/phim_heo/: asgi.py  settings.py  urls.py  wsgi.py
