[tool.poetry]
name = "repl_python3_Phishingphimconheo"
version = "0.1.0"
description = ""
authors = ["thanhchauns2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
livereload = "^2.6.3"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
